<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/create_resume"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/textView9"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/info_block1"
	        android:textStyle="bold" />
	
	    <EditText
	        android:id="@+id/editText1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/example_family_name"
	        android:inputType="textCapWords|textPersonName" >
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/info_bday" />
	
	    <DatePicker
	        android:id="@+id/datePicker1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/info_sex" />
	
	    <Spinner
	        android:id="@+id/spinner1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />

	    <TextView
	        android:id="@+id/textView8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/info_block2"
	        android:textStyle="bold" />
	
	    <EditText
	        android:id="@+id/editText2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/example_post"
	        android:inputType="textCapSentences" />
	
	    <EditText
	        android:id="@+id/editText3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/example_salary"
	        android:inputType="number" />

	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/info_block3"
	        android:textStyle="bold" />
	
	    <EditText
	        android:id="@+id/editText4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/example_phone_number"
	        android:inputType="phone" />
	
	    <EditText
	        android:id="@+id/editText5"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/example_email"
	        android:inputType="textEmailAddress" />

	    <Button
	        android:id="@+id/btnActTwo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/send_resume" />
	
	</LinearLayout>
</ScrollView>