<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sent_resume"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	     <TextView
	        android:id="@+id/textView12"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/info_block1"
	        android:textAppearance="?android:attr/textAppearanceMedium" />   
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/default_text" />
	
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/default_text" />
	
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/default_text" />
	    
	    <TextView
	        android:id="@+id/textView13"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/info_block2"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/default_text" />
	
	    <TextView
	        android:id="@+id/textView8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/default_text" />
	    
	    <TextView
	        android:id="@+id/textView14"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:id="@+id/textView9"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/info_block3"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/textView10"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/default_text"
	        android:linksClickable="true"
	        android:autoLink="phone"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <TextView
	        android:id="@+id/textView11"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/default_text"
	        android:linksClickable="true"
	        android:autoLink="email"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <TextView
	        android:id="@+id/textView15"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    
	    <TextView
	        android:id="@+id/textView16"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/info_can"
	        android:textAppearance="?android:attr/textAppearanceMedium"  />
	    
	    <EditText
	        android:id="@+id/editMessage"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textMultiLine"
	        android:lines="5" />

	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:text="@string/send_answer" />
	
	</LinearLayout>
</ScrollView>
